# rex

./: .gitignore  Cargo.toml  build.rs
app/: Cargo.toml
app/common/: Cargo.toml
app/common/src/: camera.rs  coords.rs  lib.rs
app/renderer/: Cargo.toml
app/renderer/src/: camera.rs  data.rs  device.rs  frame.rs  lib.rs  material.rs  object.rs
app/renderer/src/abs/: buffer.rs  cmd.rs  ctx_fr.rs  cx.rs  descriptor.rs  image.rs  memory.rs  mesh.rs  mod.rs  shader.rs  uniforms.rs  util.rs
app/renderer/src/abs/allocators/: buddy.rs  mod.rs
app/renderer/src/abs/cx/: debug_callback.rs
app/renderer/src/abs/memory/: mem_type.rs
app/renderer/src/abs/memory/mem_type/: block.rs
app/res/: .gitignore  basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  compile_shaders.sh  flat.frag  tri.frag  tri.vert  tri.vert.spv
app/src/: app.rs  buddy.rs  buffer.rs  collision.rs  cx.rs  image.rs  lib.rs  main.rs  memory.rs  meshgen.rs  util.rs
app/src/renderer/: buffer.rs  cx.rs  image.rs  memory.rs  mesh.rs  mod.rs  render.rs  world.rs
app/src/renderer/abs/: buddy.rs  buffer.rs  cx.rs  descriptor.rs  image.rs  memory.rs  mesh.rs  mod.rs  shader.rs  util.rs
app/src/renderer/abs/allocators/: buddy.rs  linear.rs  mod.rs
app/src/renderer/abs/cx/: debug_callback.rs
editor/: Cargo.toml
editor/data/: comp.frag  comp.vert  cube.frag  cube.gltf  cube.vert
editor/src/: main.rs
src/: building.rs  grid.rs  lib.rs  math.rs  new.rs  node.rs  ser_map.rs  ser_set.rs  space.rs  wfc.rs
src/wfc/: mod.rs  tilemap.rs
visualizer/: Cargo.toml
visualizer/res/pieces/: pieces.ron
visualizer/src/: main.rs
