[package]
name = "rex"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["visualizer"]

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.66"
enum-map = "2.4.2"
glam = { version = "0.22.0", features = ["mint"] }
log = "0.4.17"
mint = "0.5.9"
pathfinding = "3.0.14"
rand = "0.8.5"
rayon = "1.6.0"
thiserror = "1.0.38"
