[package]
name = "rex"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["visualizer", "app", "app/renderer", "app/common"]

[dependencies]
ahash = { version = "0.8.2", features = ["serde"] }
anyhow = "1.0.66"
bitflags = "1.3.2"
glam = { version = "0.23.0", default-features = false, features = ["serde"] }
log = "0.4.17"
mint = "0.5.9"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde-big-array = "0.5.0"
