[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app"

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0"
ash = { version = "0.37.0", features = ["linked"] }
rex = { path = ".." }
env_logger = "0.9.3"
log = "0.4.17"
winit = "0.27"
ash-window = "0.12"
raw-window-handle = "0.5"
cstr = "0.2.11"
glam = "0.22.0"
backtrace = "0.3"
nonzero_ext = "0.3.0"
tobj = "3.2.3"
renderer = { path = "renderer" }
common = { path = "common" }
serde_json = "1.0.91"
image = "0.24.5"
