[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ash-window = "0.12.0"
futures = "0.3.28"
glam = "0.24.0"
phobos = { git = "https://github.com/NotAPenguin0/phobos-rs", rev = "8036bfe8f868fd0dbd8ae79239defe4a79c29236" }
pretty_env_logger = "0.5.0"
winit = "0.28.6"
