[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ggez = "0.8.1"
rex = { path = ".." }
env_logger = "0.9.3"
log = "0.4.17"
rand = "0.8.5"
mint = "0.5.9"
