[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ggez = { git = "https://github.com/ggez/ggez", rev = "7d4de6809130f5720b02e7c61d9fb6c9da15f76e" }
rex = { path = ".." }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
nfd = { git = "https://github.com/EmbarkStudios/nfd-rs", branch = "update-submodule" }
serde_json = "1.0.91"
glam = { version = "0.23.0", features = ["mint"] }
